[tool.poetry]
name = "plttools"
version = "0.1.0"
description = "loss table metrics"
authors = ["twhiteley <tom.whiteley@rms.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.3"
numpy = "1.23.2"
scipy = "1.9.3"


[tool.poetry.group.dev.dependencies]
rope = "1.3.0"
autopep8 = "1.7.0"
pylint = "2.14.5"
pytest = "7.1.2"
coverage = "6.4.4"
pep8 = "1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
