[tool.poetry]
name = "aggregationtools"
version = "0.1.0"
description = ""
authors = ["YWangRMS <127143977+YWangRMS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pandas = "^2.2.2"
scipy = "^1.14.1"
tensorflow = "^2.18.0"
tensorflow_probability = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

